Fix: Hide the overflow image

--- a/portfolio/css/commons.scss
+++ b/portfolio/css/commons.scss
@@ -88,6 +88,8 @@ button,
     color: $dominant-color;
     height: 44px;
     transition: transform 0.4s ease;
+    // はみ出した画像の処理
+    overflow: hidden;
 }
 .btn:active {
     transform: scale(0.96);
@@ -121,12 +123,13 @@ button,
     transform: translateX(-50%);
     height: 100%;
     width: 150%;
-    border: 2px solid red;
+    // border: 2px solid red;
     background-repeat: no-repeat;
     z-index: -1;
 }
 .pop.animate::before {
     top: -70%;
+    // Click animation
     background-image: radial-gradient(
             circle,
             $secondary-color 20%,
